--- a/trusted-firmware-m/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/trusted-firmware-m/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -100,7 +100,7 @@ LR_CODE S_CODE_START {
         device_definition.o (+RO)
         *(SFN)
         *armlib* (+RO)
-        *libtfmsprt.a (+RO)
+        *libtfm_sprt.a (+RO)
         *psa_client.* (+RO)
         *psa_service.* (+RO)
         *psa_lifecycle.* (+RO)
