Build: Put CONFIG_TFM_ENABLE_MEMORY_PROTECT flag to platform
The flag "CONFIG_TFM_ENABLE_MEMORY_PROTECT" is a platform-scope
option, move it to platform_s target.
Remove the isolation setup in library SPM code and reuse the one
of SPM HAL, since they are doing the same things.

Change-Id: I5766ddecc525ee2eda3f2e5989b31dd5c41fde6b
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -66,6 +66,7 @@ target_compile_definitions(platform_s
         TFM_SPM_LOG_LEVEL=${TFM_SPM_LOG_LEVEL}
     PRIVATE
         $<$<BOOL:${SYMMETRIC_INITIAL_ATTESTATION}>:SYMMETRIC_INITIAL_ATTESTATION>
+        $<$<OR:$<VERSION_GREATER:${TFM_ISOLATION_LEVEL},1>,$<STREQUAL:"${TEST_PSA_API}","IPC">>:CONFIG_TFM_ENABLE_MEMORY_PROTECT>
 )
 
 #========================= Platform Non-Secure ================================#
