Build: Exclude log source files in silence log level
Exclude the log source files from build system when log level is equal
to SILENCE.

Change-Id: I92171327a8a4993896b188a3fcaa06da740ea42a
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -34,7 +34,7 @@ target_sources(tfm_spm
         common/tfm_boot_data.c
         common/tfm_core_utils.c
         common/utilities.c
-        common/spm_log.c
+        $<$<NOT:$<STREQUAL:${TFM_SPM_LOG_LEVEL},${TFM_SPM_LOG_LEVEL_SILENCE}>>:common/spm_log.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_multi_core_mem_check.c>
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:cmsis_psa/tfm_rpc.c>
