--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -21,8 +21,8 @@ target_sources(tfm_sprt
         ./crt_memmove.c
         ./crt_memset.c
         ./service_api.c
-        ./tfm_sp_log_raw.c
-        ${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c
+        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},${TFM_PARTITION_LOG_LEVEL_SILENCE}>>:./tfm_sp_log_raw.c>
+        $<$<NOT:$<STREQUAL:${TFM_PARTITION_LOG_LEVEL},${TFM_PARTITION_LOG_LEVEL_SILENCE}>>:${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c>
 )
 
 target_link_libraries(tfm_sprt
