Build: Switch mbedtls auto-patching to git am
To avoid occasional CRLF issues with certain windows git config

Change-Id: I97529d1724ecb75e1bf9d50872e513cd3c502ff2
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/lib/ext/mbedcrypto/CMakeLists.txt
+++ b/lib/ext/mbedcrypto/CMakeLists.txt
@@ -24,7 +24,7 @@ if ("${MBEDCRYPTO_PATH}" STREQUAL "DOWNLOAD")
             GIT_SHALLOW TRUE
             GIT_PROGRESS TRUE
             GIT_SUBMODULES ""
-            PATCH_COMMAND ${GIT_EXECUTABLE} apply ${PATCH_FILES}
+            PATCH_COMMAND ${GIT_EXECUTABLE} am ${PATCH_FILES}
         )
     else()
         FetchContent_Declare(mbedcrypto
