--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -24,7 +24,6 @@ if(BL2)
     target_sources(bl2_crypto_hw
         PRIVATE
             ${CMAKE_CURRENT_SOURCE_DIR}/cc312.c
-            $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_log.c>
             $<$<STREQUAL:${CRYPTO_HW_ACCELERATOR_OTP_STATE},PROVISIONING>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_provisioning.c>
     )
 
@@ -48,22 +47,23 @@ if(BL2)
     add_subdirectory(${CC312_PATH} ${CMAKE_CURRENT_BINARY_DIR}/bl2_cc312)
     set(CMAKE_BUILD_TYPE ${SAVED_BUILD_TYPE} CACHE STRING "Build type: [Debug, Release, RelWithDebInfo, MinSizeRel]" FORCE)
 
+    target_sources(bl2_cc312
+        PUBLIC
+            $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_log.c>
+    )
+
     # Adding two targets as link-time dependencies of each other seems bad, but
     # in reality it just means that they'll share headers and compile defs.
     target_link_libraries(bl2_cc312
         PRIVATE
             bl2_mbedcrypto
+        PUBLIC
+            platform_bl2
     )
     target_link_libraries(bl2_mbedcrypto
         PRIVATE
             bl2_cc312
         PUBLIC
-            bl2_crypto_hw
-    )
-
-    #Link utils to PAL for logging
-    target_link_libraries(cc312_pal
-        INTERFACE
             bl2_crypto_hw
     )
 
@@ -131,11 +131,18 @@ set(CMAKE_BUILD_TYPE ${MBEDCRYPTO_BUILD_TYPE})
 add_subdirectory(${CC312_PATH} ${CMAKE_CURRENT_BINARY_DIR}/crypto_service_cc312)
 set(CMAKE_BUILD_TYPE ${SAVED_BUILD_TYPE} CACHE STRING "Build type: [Debug, Release, RelWithDebInfo, MinSizeRel]" FORCE)
 
+target_sources(crypto_service_cc312
+    PUBLIC
+        $<$<OR:$<CONFIG:Debug>,$<CONFIG:relwithdebinfo>>:${CMAKE_CURRENT_SOURCE_DIR}/cc312_log.c>
+)
+
 # Adding two targets as link-time dependencies of each other seems bad, but
 # in reality it just means that they'll share headers and compile defs.
 target_link_libraries(crypto_service_cc312
     PRIVATE
         crypto_service_mbedcrypto
+    PUBLIC
+        platform_s
 )
 target_link_libraries(crypto_service_mbedcrypto
     PRIVATE
