--- a/secure_fw/partitions/psa_proxy/CMakeLists.txt
+++ b/secure_fw/partitions/psa_proxy/CMakeLists.txt
@@ -40,7 +40,7 @@ target_link_libraries(tfm_partition_psa_proxy
 
 ############################ Secure API ########################################
 
-target_sources(tfm_secure_api
+target_sources(tfm_sprt
     PRIVATE
         ../crypto/tfm_crypto_secure_api.c
         ../initial_attestation/tfm_attest_secure_api.c
