--- a/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/spm/cmsis_psa/tfm_secure_irq_handlers_ipc.inc.template
@@ -7,10 +7,10 @@
 
 {{utilities.donotedit_warning}}
 
-{% for manifest in manifests %}
-#ifdef {{manifest.attr.conditional}}
-#include "{{manifest.header_file}}"
-#endif /* {{manifest.attr.conditional}} */
+{% for partition in partitions %}
+#ifdef {{partition.attr.conditional}}
+#include "{{partition.header_file}}"
+#endif /* {{partition.attr.conditional}} */
 
 {% endfor %}
 
@@ -21,27 +21,27 @@
 
 /* Definitions of the signals of the IRQs (if any) */
 const struct tfm_core_irq_signal_data_t tfm_core_irq_signals[] = {
-{% for manifest in manifests %}
-    {% if manifest.manifest.irqs %}
-        {% if manifest.attr.conditional %}
-#ifdef {{manifest.attr.conditional}}
+{% for partition in partitions %}
+    {% if partition.manifest.irqs %}
+        {% if partition.attr.conditional %}
+#ifdef {{partition.attr.conditional}}
         {% endif %}
-        {% for handler in manifest.manifest.irqs %}
+        {% for handler in partition.manifest.irqs %}
             {% set irq_data = namespace() %}
             {% if handler.source %}
                 {% set irq_data.line = handler.source %}
             {% else %}
-#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
             {% if handler.tfm_irq_priority %}
                 {% set irq_data.priority = handler.tfm_irq_priority %}
             {% else %}
                 {% set irq_data.priority = "TFM_DEFAULT_SECURE_IRQ_PRIOTITY" %}
             {% endif %}
-    {{ _irq_record(manifest.manifest.name, handler.signal, irq_data.line, irq_data.priority) }}
+    {{ _irq_record(partition.manifest.name, handler.signal, irq_data.line, irq_data.priority) }}
         {% endfor %}
-        {% if manifest.attr.conditional %}
-#endif /* {{manifest.attr.conditional}} */
+        {% if partition.attr.conditional %}
+#endif /* {{partition.attr.conditional}} */
         {% endif %}
    {% endif %}
 {% endfor %}
@@ -52,18 +52,18 @@ const size_t tfm_core_irq_signals_count = (sizeof(tfm_core_irq_signals) /
                                            sizeof(*tfm_core_irq_signals)) - 1; /* adjust for the dummy element */
 
 /* Definitions of privileged IRQ handlers (if any) */
-{% for manifest in manifests %}
-    {% if manifest.manifest.irqs %}
-        {% if manifest.attr.conditional %}
-#ifdef {{manifest.attr.conditional}}
+{% for partition in partitions %}
+    {% if partition.manifest.irqs %}
+        {% if partition.attr.conditional %}
+#ifdef {{partition.attr.conditional}}
         {% endif %}
-        {% for handler in manifest.manifest.irqs %}
+        {% for handler in partition.manifest.irqs %}
             {% if handler.source is number %}
 void irq_{{handler.source}}_Handler(void)
             {% elif handler.source %}
 void {{handler.source}}_Handler(void)
             {% else %}
-#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
 {
     __disable_irq();
@@ -71,16 +71,16 @@ void {{handler.source}}_Handler(void)
      * in handler mode, and we will not be pre-empted as we disabled interrupts
      */
             {% if handler.source %}
-    tfm_irq_handler({{manifest.manifest.name}}, {{handler.signal}}, {{handler.source}});
+    tfm_irq_handler({{partition.manifest.name}}, {{handler.signal}}, {{handler.source}});
             {% else %}
-#error "Interrupt source isn't provided for 'irqs' in partition {{manifest.manifest.name}}"
+#error "Interrupt source isn't provided for 'irqs' in partition {{partition.manifest.name}}"
             {% endif %}
     __enable_irq();
 }
 
         {% endfor %}
-        {% if manifest.attr.conditional %}
-#endif /* {{manifest.attr.conditional}} */
+        {% if partition.attr.conditional %}
+#endif /* {{partition.attr.conditional}} */
         {% endif %}
 
     {% endif %}
