FWU: Add Firmware Update partition
Firmware Update(FWU) partition provides the functionality
of updating firmware images. This patch implemented the
partition in Library mode.

Change-Id: I736477549b055c64cd8106ad57c3ad7b1b2007ee
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -12,6 +12,7 @@ project("Bootloader" VERSION 0.1.0 LANGUAGES C ASM)
 add_executable(bl2
     src/security_cnt.c
     src/flash_map.c
+    $<$<BOOL:${MCUBOOT_DATA_SHARING}>:src/shared_data.c>
 )
 
 add_subdirectory(ext/mcuboot)
