Build: add rot to cmake partition target names
change from tfm_partition_x to tfm_app_rot_partition_x or
tfm_psa_rot_partition_x. This allows the linker to automtically pick up
the library files and determine where they should be placed.

Update TFM_TEST_REPO_VERSION to point to
f1e9130c47f213a5380b00427770f61486b6e4fe, which is the head of the
changes required for enabling this patch to work.

Change-Id: If0b355f9e94a0ecc862c292302a573df1b3f9c2d
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
-# Allow linking to things 'upwards' in the directory tree (in this case bl2 / tfm_partition_crypto)
+# Allow linking to things 'upwards' in the directory tree (in this case bl2 / tfm_psa_rot_partition_crypto)
 cmake_policy(SET CMP0079 NEW)
 # Allow relative paths
 cmake_policy(SET CMP0076 NEW)
