--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -12,9 +12,9 @@ endif()
 cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0079 NEW)
 
-add_library(tfm_partition_crypto STATIC)
+add_library(tfm_psa_rot_partition_crypto STATIC)
 
-target_sources(tfm_partition_crypto
+target_sources(tfm_psa_rot_partition_crypto
     PRIVATE
         crypto_init.c
         crypto_alloc.c
@@ -28,20 +28,20 @@ target_sources(tfm_partition_crypto
 )
 
 # The generated sources
-target_sources(tfm_partition_crypto
+target_sources(tfm_psa_rot_partition_crypto
     PRIVATE
         $<$<BOOL:${TFM_PSA_API}>:
             ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/crypto/auto_generated/intermedia_tfm_crypto.c>
 )
 
-target_include_directories(tfm_partition_crypto
+target_include_directories(tfm_psa_rot_partition_crypto
     PRIVATE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
         ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/crypto
 )
 
 # Linking to external interfaces
-target_link_libraries(tfm_partition_crypto
+target_link_libraries(tfm_psa_rot_partition_crypto
     PRIVATE
         tfm_secure_api
         platform_s
@@ -49,7 +49,7 @@ target_link_libraries(tfm_partition_crypto
         psa_interface
         tfm_sprt
 )
-target_compile_definitions(tfm_partition_crypto
+target_compile_definitions(tfm_psa_rot_partition_crypto
     PUBLIC
         $<$<BOOL:${CRYPTO_KEY_MODULE_DISABLED}>:TFM_CRYPTO_KEY_MODULE_DISABLED>
         $<$<BOOL:${CRYPTO_AEAD_MODULE_DISABLED}>:TFM_CRYPTO_AEAD_MODULE_DISABLED>
@@ -99,14 +99,14 @@ set_source_files_properties(tfm_crypto_secure_api.c
 # Pick up configuration definitions
 target_link_libraries(tfm_secure_api
     INTERFACE
-        tfm_partition_crypto
+        tfm_psa_rot_partition_crypto
 )
 
 ############################ Partition Defs ####################################
 
 target_link_libraries(tfm_partitions
     INTERFACE
-        tfm_partition_crypto
+        tfm_psa_rot_partition_crypto
 )
 
 target_compile_definitions(tfm_partition_defs
