--- a/secure_fw/partitions/protected_storage/CMakeLists.txt
+++ b/secure_fw/partitions/protected_storage/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -7,9 +7,9 @@
 
 if (NOT TFM_PARTITION_PROTECTED_STORAGE)
     if(TFM_PARTITION_PSA_PROXY)
-        add_library(tfm_partition_ps INTERFACE)
+        add_library(tfm_app_rot_partition_ps INTERFACE)
 
-        target_include_directories(tfm_partition_ps
+        target_include_directories(tfm_app_rot_partition_ps
             INTERFACE
                 $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
         )
@@ -20,16 +20,16 @@ endif()
 cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0079 NEW)
 
-add_library(tfm_partition_ps STATIC)
+add_library(tfm_app_rot_partition_ps STATIC)
 
-target_include_directories(tfm_partition_ps
+target_include_directories(tfm_app_rot_partition_ps
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
     PRIVATE
         ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/protected_storage
 )
 
-target_sources(tfm_partition_ps
+target_sources(tfm_app_rot_partition_ps
     PRIVATE
         tfm_ps_req_mngr.c
         tfm_protected_storage.c
@@ -44,19 +44,19 @@ target_sources(tfm_partition_ps
 )
 
 # The generated sources
-target_sources(tfm_partition_ps
+target_sources(tfm_app_rot_partition_ps
     PRIVATE
         $<$<BOOL:${TFM_PSA_API}>:
             ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/protected_storage/auto_generated/intermedia_tfm_protected_storage.c>
 )
 
-target_link_libraries(tfm_partition_ps
+target_link_libraries(tfm_app_rot_partition_ps
     PRIVATE
         tfm_secure_api
         psa_interface
         secure_fw
         platform_s
-        tfm_partition_its
+        tfm_psa_rot_partition_its
 )
 
 ############################ Secure API ########################################
@@ -77,7 +77,7 @@ set_source_files_properties(tfm_ps_secure_api.c
 
 target_link_libraries(tfm_partitions
     INTERFACE
-        tfm_partition_ps
+        tfm_app_rot_partition_ps
 )
 
 target_compile_definitions(tfm_partition_defs
