--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017-2020 Arm Limited. All rights reserved.
+ * Copyright (c) 2017-2021 Arm Limited. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -57,7 +57,7 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_ATTR_FN)
+        *({{manifest.manifest.name}}_PSA-ROT_ATTR_FN)
     }
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -84,7 +84,7 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RO)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_ATTR_FN)
+        *({{manifest.manifest.name}}_APP-ROT_ATTR_FN)
     }
     {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
@@ -154,8 +154,8 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_ATTR_RW)
-        *({{manifest.manifest.name}}_ATTR_ZI)
+        *({{manifest.manifest.name}}_PSA-ROT_ATTR_RW)
+        *({{manifest.manifest.name}}_PSA-ROT_ATTR_ZI)
     }
 
     PT_{{manifest.manifest.name}}_PRIVATE_DATA_END +0 ALIGN 32 {
@@ -199,8 +199,8 @@ LR_CODE S_CODE_START {
         {{pattern}} (+RW +ZI)
         {% endfor %}
     {% endif %}
-        *({{manifest.manifest.name}}_ATTR_RW)
-        *({{manifest.manifest.name}}_ATTR_ZI)
+        *({{manifest.manifest.name}}_APP-ROT_ATTR_RW)
+        *({{manifest.manifest.name}}_APP-ROT_ATTR_ZI)
     }
 
     PT_{{manifest.manifest.name}}_PRIVATE_DATA_END +0 ALIGN 32 {
