Tool: Generate static handle for stateless service
Parsing from partition manifest and generate static handle
value for stateless services.

- Validate number of stateless services
- Static handle value auto allocation
- Duplicate detection

Change-Id: I8fdf79f5040caf1cbbdf42e52a4a405b36d88166
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/interface/include/psa_manifest/sid.h.template
+++ b/interface/include/psa_manifest/sid.h.template
@@ -27,6 +27,10 @@ extern "C" {
                 {% else %}
 #define {{"%-58s"|format(str)}} (1U)
                 {% endif %}
+                {% if partition.manifest.psa_framework_version > 1.0 and service.connection_based == false %}
+                    {% set str = service.name + "_HANDLE" %}
+#define {{"%-58s"|format(str)}} ({{"%d"|format(service.stateless_handle)}}U)
+                {% endif %}
             {% endfor %}
         {% endif %}
 
