FWU: Add the IPC model support
Change-Id: I555169f7bf9c6fa9ab5b5a1d71d196fe3fd11817
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/secure_fw/partitions/firmware_update/CMakeLists.txt
+++ b/secure_fw/partitions/firmware_update/CMakeLists.txt
@@ -24,7 +24,9 @@ target_sources(tfm_psa_rot_partition_fwu
     PRIVATE
         tfm_fwu_req_mngr.c
         tfm_fwu.c
-)
+        $<$<BOOL:${TFM_PSA_API}>:
+        ${CMAKE_BINARY_DIR}/generated/secure_fw/partitions/firmware_update/auto_generated/intermedia_tfm_firmware_update.c>
+        )
 
 # Include the bootloader specific configuration.
 if ((NOT TFM_FWU_BOOTLOADER_LIB) OR (NOT EXISTS ${TFM_FWU_BOOTLOADER_LIB}))
