Build: Fix MCUboot image dependency checking
Previously the secure image was depeding on the version of the secure
image, and the NS on the NS. Now the NS correctly depends on S and S
depends on NS. Update the documentation strings of the image dependency
cmake options to be more clear. Remove dependency in image when
MCUBOOT_IMAGE_NUMBER == 1 as it isn't checked in that case.

Change-Id: I32557678cc9cdc8485fb812b2b08e5667b2fd9c0
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -1,5 +1,5 @@
 #------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -125,7 +125,7 @@ add_custom_command(OUTPUT tfm_s_signed.bin
         --pad-header
         -H 0x400
         -s ${MCUBOOT_SECURITY_COUNTER_S}
-        -d \"\(0,${MCUBOOT_S_IMAGE_MIN_VER}\)\"
+        -d \"\(1,${MCUBOOT_NS_IMAGE_MIN_VER}\)\"
         $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
         $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:-E${MCUBOOT_KEY_ENC}>
         $<TARGET_FILE_DIR:tfm_s>/tfm_s.bin
@@ -173,7 +173,7 @@ if(NS)
             --pad-header
             -H 0x400
             -s ${MCUBOOT_SECURITY_COUNTER_NS}
-            -d \"\(1, ${MCUBOOT_NS_IMAGE_MIN_VER}\)\"
+            -d \"\(0, ${MCUBOOT_S_IMAGE_MIN_VER}\)\"
             $<TARGET_FILE_DIR:tfm_ns>/tfm_ns.bin
             $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
             $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:-E${MCUBOOT_KEY_ENC}>
@@ -221,8 +221,6 @@ if(NS)
             --pad-header
             -H 0x400
             -s ${MCUBOOT_SECURITY_COUNTER_S}
-            -d \"\(0, ${MCUBOOT_S_IMAGE_MIN_VER}\)\"
-            -d \"\(1, ${MCUBOOT_NS_IMAGE_MIN_VER}\)\"
             $<$<STREQUAL:${MCUBOOT_UPGRADE_STRATEGY},OVERWRITE_ONLY>:--overwrite-only>
             $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:-E${MCUBOOT_KEY_ENC}>
             tfm_s_ns.bin
